--- a/packages/eyes-universal-poc/package.json
+++ b/packages/eyes-universal-poc/package.json
@@ -21,8 +21,9 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/eyes-api": "file:../eyes-api",
-    "@applitools/eyes-universal": "file:../eyes-universal",
+    "@applitools/eyes-api": "link:../eyes-api",
+    "@applitools/eyes-universal": "link:../eyes-universal",
+    "chalk": "^4.1.0",
     "uuid": "^8.3.1",
     "ws": "7.4.0"
   },
