--- a/packages/eyes-universal-poc/package.json
+++ b/packages/eyes-universal-poc/package.json
@@ -22,7 +22,7 @@
   "main": "./index.js",
   "dependencies": {
     "@applitools/eyes-api": "link:../eyes-api",
-    "@applitools/eyes-universal": "link:../eyes-universal",
+    "@applitools/eyes-universal": "file:../eyes-universal",
     "chalk": "^4.1.0",
     "uuid": "^8.3.1",
     "ws": "7.4.0"
